<resources>
    <string name="base_url_live" translatable="false">aHR0cHM6Ly9wcmludHBob3RvLmluL1Bob3RvX2Nhc2UvYXBpLw==</string>
    <string name="base_url_test" translatable="false">aHR0cHM6Ly9hZG1pbi1yZWxlYXNlLnByaW50cGhvdG8uaW4vYXBpLw==</string>
    <string name="base_url_paytm" translatable="false">aHR0cHM6Ly9wcmludHBob3RvLmluL1Bob3RvX2Nhc2UvcGF5dG0v</string>
    <string name="instagram_client_id" translatable="false">3faa6c1b85a44436aea28432f6b9d04c</string>
    <string name="instagram_secret" translatable="false">9fc189c74d8f4c72b601943f229a7b4e</string>
    <string name="instagram_redirect" translatable="false">http://admin.vasundharavision.com/art_work/loader.html</string>
    <string name="facebook_app_id" translatable="false">6173097026129479</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2127267220654385</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="inter_ad_unit_id" translatable="false">ca-app-pub-9649256815954059/1531135178</string>
    <string name="app_id" translatable="false">ca-app-pub-9649256815954059~7543091324</string>
    <string name="native_ad_unit_id" translatable="false">ca-app-pub-9649256815954059/6867222338</string>
    <string name="app_open" translatable="false">ca-app-pub-9649256815954059/1339563487</string>
    <string name="india" translatable="false">+91</string>
    <string name="Saudi" translatable="false">+966</string>
    <string name="Egypt" translatable="false">+966</string>
    <string name="UAE" translatable="false">+971</string>
    <string name="Kuwait" translatable="false">+965</string>
    <string name="Bahrain" translatable="false">+973</string>
    <string name="Oman" translatable="false">+968</string>
    <string name="Jordan" translatable="false">+962</string>
    <string-array name="Country_Type">
        <item>@string/india</item>
    </string-array>
    <string-array name="selectAction">
        <item>Resend OTP</item>
        <item>Enter OTP Manually</item>
    </string-array>
    <string name="text_null">Enter text first</string>
    <string name="registring">Registering..</string>
    <string name="splash_text">Keep it stylish with Mobile Skins for your cell phone. Printphoto.in provides you the best quality customized mobile skins. </string>
    <string name="rs_icon">₹</string>
    <string name="title_activity_status">CCAvenueMobile</string>
    <string name="payment_successfull">Order Received</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Print photo is available. Please update to latest version now!!</string>
    <string name="Photo">Choose Photo</string>
    <string name="Instagram">Instagram</string>
    <string name="instagram_login">Instagram Login</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="share_your_promo_code_in_review">Share your promo code in review</string>
    <string name="code">CODE: </string>
    <string name="code_val">  Code</string>
    <string name="apply_promocode_amp_get_discount">Apply Promo code &amp; Get Discount</string>
    <string name="off">off</string>
    <string name="_50">₹50</string>
    <string name="flat">Flat</string>
    <string name="use_this_promocode_amp_get_50_inr_instant_discount">Use This Promo code &amp; Get ₹0 INR Instant Discount:</string>
    <string name="share_your_promocode_amp_get_50_in_wallet">Share Your Promo code &amp; Get ₹ 0 in Wallet</string>
    <string name="transaction_history">Transaction History</string>
    <string name="request_for_money_to_paytm_wallet">Request for money to paytm wallet</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="we_sent_you_code_to_nverify_your_mobile_number">OTP has been send to your \nmobile number</string>
    <string name="image">image</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="select_high_resolution_image">Please select high resolution image</string>
    <string name="loading">Loading…</string>
    <string name="background">Background</string>
    <string name="images">Images</string>
    <string name="images_n">Images</string>
    <string name="time_out">Time Out</string>
    <string name="connect_time_out">Connect timed out. Please try again later.</string>
    <string name="retry">Retry</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="slow_connect">Internet is slow. Please check internet connection.</string>
    <string name="no_images_available">No images available</string>
    <string name="bulk">Bulk</string>
    <string name="full_name">Full Name</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_business_name_type">Enter Business Name/Type</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="description">Description…</string>
    <string name="submit">Submit</string>
    <string name="select_quantity">Select quantity</string>
    <string name="select_product">Select product</string>
    <string name="server_error">Server Error</string>
    <string name="server_under_maintenance">Server under maintenance!!! Try after sometime</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email id</string>
    <string name="valid_email">Please enter valid email id</string>
    <string name="enter_mobile">Please enter mobile number</string>
    <string name="valid_mobile">Please enter valid mobile number</string>
    <string name="valid_business">Please enter valid business name</string>
    <string name="min_fifty_character">Please enter the description properly and enter min 50 characters!!</string>
    <string name="select_any_prod">Please select any product</string>
    <string name="please_select_qty">Please select quantity</string>
    <string name="alert">Alert</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="cover">Cover</string>
    <string name="editor">Editor</string>
    <string name="add_photo">Add Photo</string>
    <string name="please_add_high_resolution_image_to_get_high_clearity_phone_cover">Please add high resolution image to get high clarity phone cover</string>
    <string name="log_in">Log In</string>
    <string name="need_login">Need to log in first</string>
    <string name="please_select_image">Please select image</string>
    <string name="add_to_cart">Add to cart?</string>
    <string name="add_to_cart2">Add to cart</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="permission_required">Permissions Required</string>
    <string name="permission_sentence">Please allow permission for camera.</string>
    <string name="permission_sentence_storage">Please allow permission for storage.</string>
    <string name="choose_color">Choose color</string>
    <string name="upload_fail">Upload Failed</string>
    <string name="change">Change</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_enter_old_pass">Please Enter old Password.</string>
    <string name="change_enter_new_pass">Please Enter New Password.</string>
    <string name="change_confirm_pass">Please Enter Confirm Password.</string>
    <string name="pass_does_not_match">Password Does not match.</string>
    <string name="pass_limit">New password required at least 6 digit.</string>
    <string name="pass_change_successfully">Password changed Successfully</string>
    <string name="please_add_high_resolution_image_to_get_high_clearity_mug">Please add high resolution image to get high clarity mug</string>
    <string name="complain">Complain</string>
    <string name="email_id">Email ID</string>
    <string name="contact">Contact</string>
    <string name="us">Us</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="support_timing">Support Timing</string>
    <string name="default_val">Default</string>
    <string name="search">Search ..</string>
    <string name="delivery">Delivery</string>
    <string name="address">Address</string>
    <string name="continue_val">CONTINUE</string>
    <string name="no_address_available">No address available</string>
    <string name="delete">Delete</string>
    <string name="are_u_sure_del">Are you sure to delete this address?</string>
    <string name="offer">Offer</string>
    <string name="today_offer">Offers</string>
    <string name="no_offer_available">No offers available</string>
    <string name="please_add_high_resolution_image_to_get_high_clearity_product">Please add high resolution image to get high clarity product</string>
    <string name="add_image_sticker">Add image or stickers</string>
    <string name="edit">Edit</string>
    <string name="account">Account</string>
    <string name="provide_pincode">Please provide proper pincode</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="invalid_email_id">Invalid Email ID</string>
    <string name="not_available">Not Available</string>
    <string name="update">Update</string>
    <string name="update_success">Update successfully</string>
    <string name="update_fail">Update Failed</string>
    <string name="something_went_wrong_try_agaian">Something went to wrong. Please try again Later</string>
    <string name="please_select_country">PLease Select Currency</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no_optional">Mobile No. (Optional)</string>
    <string name="update_profile">Update Profile</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="gallery">Gallery</string>
    <string name="please_enter_text">Please enter text</string>
    <string name="subject">Subject:</string>
    <string name="add_image_if_required">Add Image(if required):</string>
    <string name="select_image">Select Image</string>
    <string name="browse">Browse…</string>
    <string name="complaint">Complaint:</string>
    <string name="type_complaint">Type Complaint</string>
    <string name="add">Add</string>
    <string name="font">Font</string>
    <string name="enter_text">Enter text</string>
    <string name="forget">Forget</string>
    <string name="confirm">Confirm</string>
    <string name="want_to_save">Want to save?</string>
    <string name="are_you_exit">Are you sure you want to exit?</string>
    <string name="exit">EXIT</string>
    <string name="mobile">Mobile</string>
    <string name="no_more_data">No more data</string>
    <string name="enter_correct_number">Enter correct number</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_correct_email">Enter correct EmailID</string>
    <string name="transaction">Transaction</string>
    <string name="history">History</string>
    <string name="no_transaction">No Transaction</string>
</resources>