<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Usefull.ForgetpasswordActivity">

    <androidx.appcompat.widget.Toolbar
        style="@style/ToolBarStyle.Event"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center">


                <TextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/forget"
                    android:textColor="@color/colortitle1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/title1"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_toRightOf="@id/title"
                    android:gravity="center"
                    android:text="@string/password"
                    android:textColor="@color/print_colorPrimary"
                    android:textStyle="bold"

                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/id_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:src="@drawable/ic_action_back" />

            <ImageView
                android:id="@+id/id_reset"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:src="@drawable/ic_reset" />


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/id_ll_print_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/im_printphoto"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_print_photo" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="bottom|left"
            android:text="@string/new_password"
            android:textColor="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/new_bg_border">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:src="@drawable/ic_key" />

            <EditText
                android:id="@+id/ed_new_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/transparent"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^*()_+/*-,.?:;="
                android:hint="@string/change_enter_new_pass"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_10sdp"
                android:singleLine="true" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="bottom|left"
            android:text="Confirm Password"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/new_bg_border">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:src="@drawable/ic_key" />

            <EditText
                android:id="@+id/ed_cn_new_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/transparent"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^*()_+/*-,.?:;="
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_10sdp"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_cn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/print_colorPrimary"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>


</LinearLayout>