<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Usefull.Seller_transaction_activity">

    <androidx.appcompat.widget.Toolbar
        style="@style/ToolBarStyle.Event"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center">


                <TextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/transaction"
                    android:textColor="@color/colortitle1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/title1"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_toRightOf="@id/title"
                    android:gravity="center"
                    android:text="@string/history"
                    android:textColor="@color/print_colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/id_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:src="@drawable/ic_action_back" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_transaction_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_no_transaction"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_transaction"
        android:textSize="@dimen/_18sdp"
        android:visibility="gone" />


</LinearLayout>